update na alze, dalsi opravy