@@ -9,6 +9,14 @@ public class AlzaPage {
         browser.manage().window().maximize();
     }
 
+    void waitFor(int seconds) {
+        try {
+            Thread.sleep(seconds * 1000);
+        } catch (InterruptedException e) {
+            throw new RuntimeException(e);
+        }
+    }
+
     void mainLogo() {
         browser.findElement(By.xpath("//a[@data-testid=\"headerLogo\"]")).click();
     }
@@ -32,45 +40,34 @@ public class AlzaPage {
         browser.findElement(By.xpath("//a[@data/testid=\"headerCommodityListIcon\"]")).click();
     }
 
-    String changeLanguage() {
+    void changeLanguage() {
         browser.findElements(By.cssSelector(".header-alz-20")).get(0).click();
 
         //get language locators
-        var firstOption = browser.findElements(By.cssSelector(".PrivateSwitchBase-root")).get(0);
-        var secondOption = browser.findElements(By.cssSelector("PrivateSwitchBase-root")).get(1);
+        var firstOption = browser.findElements(By.cssSelector(".header-1m9pwf3")).getFirst();
+        var secondOption = browser.findElements(By.cssSelector(".header-1m9pwf3")).get(1);
 
         //check which option is selected
-        try {
-            if (firstOption.isSelected()) {
-                secondOption.click();
-                var lng = "EN";
-                var close = "Potvrdit / Confirm";
-                browser.findElement(By.linkText(close)).click();
-                return lng;
-            } else {
-                firstOption.click();
-                var lng = "CZ";
-                var close = "Confirm";
-                browser.findElement(By.linkText(close)).click();
-                return lng;
+        var firstIsChecked = firstOption.getAttribute("checked");
+
+        if (firstIsChecked != null) {
+            secondOption.click();
+            var lng = "EN";
+            var confirmButton = browser.findElement(By.cssSelector(".header-alz-98 button"));
+            waitFor(3);
+            confirmButton.click();
+
+        } else {
+            firstOption.click();
+            var lng = "CZ";
+            var close = "Confirm";
+            browser.findElement(By.linkText(close)).click();
+
             }
-        }
-        catch(Exception ex)
-        {
-            return null;
-        }
 
     }
 
     String getLanguageVersion() {
-
-        /*var lngVersion = browser.findElement(By.xpath("//span[@data-testid=\"footerLanguageSwitcher\"]")).getAttribute("alt");
-        if (lngVersion == "CZ") {
-            var language = "CZ";
-            return language;
-        } else {
-            var language = "EN";
-            return language;*/
 
         var lngVersion = browser.findElements(By.cssSelector(".footer-alz-14")).get(0).getText();
         if (lngVersion.contains("Nejspolehlivější internetový obchod v ČR")) {
@@ -84,3 +81,7 @@ public class AlzaPage {
 
 
 }
+
+
+
+
